# AFragmenter_flask

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
app/: __init__.py  form.py
app/static/: script.js  style copy.css  style.css
app/templates/: base.html  documentation.html  index.html
src/: app.py  form.py  index.html  index_backup.html  script_backup.js  style.css  style_backup.css  test.py
src/static/: script.js  sliderControl.js  style.css
src/templates/: index copy.html  index.html
