[tool.poetry]
name = "afragmenter-flask"
version = "0.0.1"
description = ""
authors = ["StefaanVerwimp <stefaan.verwimp@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
afragmenter = "^0.0.2"
flask-wtf = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
